non-msrv-tests/tests/ui/option.stderr
error: unexpected option syntax
 --> tests/ui/option.rs:7:28
  |
7 | struct StructNoOption<T>(#[derive_where] PhantomData<T>);
  |                            ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:11:31
   |
11 | struct StructWrongSyntax<T>(#[derive_where = "default"] PhantomData<T>);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:16:4
   |
16 |     #[derive_where]
   |       ^^^^^^^^^^^^

error: unexpected option syntax
  --> tests/ui/option.rs:23:4
   |
23 |     #[derive_where = "default"]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^

error: unknown option
  --> tests/ui/option.rs:29:46
   |
29 | struct StructInvalidOption<T>(#[derive_where(option)] PhantomData<T>);
   |                                              ^^^^^^

error: unknown option
  --> tests/ui/option.rs:34:17
   |
34 |     #[derive_where(option)]
   |                    ^^^^^^
